--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,16 @@ Flask-JWT-Extended==4.7.1
 flask-marshmallow==1.3.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.2
+iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 marshmallow==4.0.0
 marshmallow-sqlalchemy==1.4.2
+packaging==25.0
+pluggy==1.5.0
 PyJWT==2.10.1
+pytest==8.3.5
 SQLAlchemy==2.0.40
 typing_extensions==4.13.2
 Werkzeug==3.1.3
